--- a/Tutorial.csproj
+++ b/Tutorial.csproj
@@ -45,10 +45,13 @@
   <ItemGroup>
     <Compile Include="4Q.cs" />
     <Compile Include="5Q.cs" />
+    <Compile Include="6Q.cs" />
     <Compile Include="oddeven.cs" />
     <Compile Include="Profile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="work.cs" />
+    <Compile Include="Array.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
